fix: add scrollbar to table of contents for better UX in small screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -162,7 +162,7 @@
 
 .toc li {
   counter-increment: section;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 .toc li::before {
